	  setvbuf, vfprintf, vprintf, vsprintf. The last three
	  are empty until passing the macro va_list is resolved.

	* pace/posix/locale.*:
	  Added localeconv ().

	* pace/posix/signal.*:
	  Added raise () and signal ().

	* pace/posix/unistd.*:
	* pace/posix/stdio.*:
	  Moved ctermid() from stdio to unistd.

	* pace/posix/stdlib.*:
	  Added abort ().

Fri Jun 30 16:54:41 2000  John Heitmann  <jwh1@cs.wustl.edu>

	* pace/wait.h:
	  Moved to sys/

Fri Jun 30 15:55:52 2000  Joe Hoffert  <joeh@cs.wustl.edu>

        * pace/posix/time.h:
        * pace/posix/time.inl:
        * pace/win32/time.h:
        * pace/win32/time.inl:
          Corrected type for timeptr arg for pace_mktime function.
          Corrected non-const arg for pace_strftime. (NOTE: The
          Solaris man page incorrectly documents the constness
          of the first argument.)

        * pace/posix/stdlib.inl:
        * pace/win32/stdlib.inl:
          Corrected void return value for srand.

Fri Jun 30 15:05:08 2000  Joe Hoffert  <joeh@cs.wustl.edu>

        * pace/posix/TODO:
          Added testing with and without PACE_HAS_POSIX_PTHREAD_SEMANTICS
          defined.

        * pace/win32/setjmp.h:
        * pace/win32/setjmp.inl:
        * pace/posix/setjmp.h:
        * pace/posix/setjmp.inl:
          Added pace_setjmp and pace_longjmp functions.

        * pace/posix/time.h:
        * pace/posix/time.inl:
        * pace/win32/time.h:
        * pace/win32/time.inl:
          Cleaned up comments and added functions pace_asctime,
          pace_ctime, pace_gmtime, pace_localtime, pace_mktime,
          and pace_strftime.
          Removed unneeded PACE_HAS_POSIX_PTHREAD_SEMANTICS guards
          in .inl files.

        * pace/win32/stdlib.h:
        * pace/win32/stdlib.inl:
        * pace/posix/stdlib.h:
        * pace/posix/stdlib.inl:
          Added functions pace_abs, pace_atof, pace_bsearch, pace_qsort,
          pace_rand, and pace_srand.